src/objects/Mass_Amendment_Agreements__c.object
<CustomObject>
    <fields>
        <fullName>Amended_Agreement_Number__c</fullName>
        <formula>Amended_Agreement__r.Apttus__FF_Agreement_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amended_Agreement_Queue_Owner__c</fullName>
        <formula>New_Amended_Agreement__r.Owner:Queue.QueueName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amended Agreement Queue Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amended_Agreement_Status__c</fullName>
        <formula>TEXT(New_Amended_Agreement__r.Apttus__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amended Agreement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amended_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Mass Amendment Agreements (Selected Agreement)</relationshipLabel>
        <relationshipName>Mass_Amendment_Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Amended_Agreement_Number__c</fullName>
        <formula>IF( New_Amended_Agreement__c =&quot;&quot;,&quot;&quot;,New_Amended_Agreement__r.Apttus__FF_Agreement_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Amended Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Amended_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Amended Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Mass Amendment Agreements</relationshipLabel>
        <relationshipName>Mass_Amendment_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Mass Amendment Request Record</inlineHelpText>
        <label>Mass Amendment Request</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Mass Amendment Agreements (Mass Amendment Request)</relationshipLabel>
        <relationshipName>Mass_Amendment_Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Agreement_Delivery_Preference__c</fullName>
        <formula>TEXT(Amended_Agreement__r.Delivery_Preference__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Agreement Delivery Preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Type__c</fullName>
        <label>Signature Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wet</fullName>
                </value>
                <value>
                    <fullName>eSign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mass Amendment Agreements</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Original_Agreement__c</columns>
        <columns>New_Amended_Agreement__c</columns>
        <columns>New_Amended_Agreement_Number__c</columns>
        <columns>Amended_Agreement_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Mass Agreement Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Amendment Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>